--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@loadable/component": "^5.15.3",
@@ -20,6 +21,7 @@
     "framer-motion": "^10.12.16",
     "next": "13.4.4",
     "next-seo": "^6.0.0",
+    "next-sitemap": "^4.1.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
